# EqualityML

./: .Rbuildignore  .Rhistory  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  Equality AI - Individual Contributor License Agreement (4895-7071-8731.2).docx  LICENSE  NAMESPACE  PyPI_README.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: R-CMD-check.yaml  ci.yml
R/: bias_mitigation.R  fairness_evaluation.R
data/: compas-scores-two-years.csv  data_test.csv  data_train.csv
equalityml/: __init__.py  classification_metric.py  fair.py  fair_boost.py  fairml.py  fairness_evaluation.py  models_comparison.py  stats.py  threshold.py  utils.py
equalityml-r/: .Rbuildignore  .gitignore  CONTRIBUTING.md  DESCRIPTION  Equality AI Corporate Contributor License Agreement. (4856-4543-9499.1).docx  LICENSE  MANIFESTO.md  NAMESPACE  NEWS.md  README.md  cran-comments.md
equalityml-r/R/: bias_mitigation.R  fairness_evaluation.R
equalityml-r/man/: bias_mitigation.Rd  fairness_metric.Rd
equalityml-r/tests/: testthat.R
equalityml-r/tests/testthat/: test-bias-mitigation.R  test-fairness-evaluation.R
fairml/: __init__.py  bias_mitigation.py  fairml.py  fairness_evaluation.py  fairness_recommendation.py
fairml-r/: .Rbuildignore  DESCRIPTION  README.md
fairml-r/R/: bias_mitigation.R  fairness_evaluation.R
fairml-r/man/: bias_mitigation.Rd  disp_removing_data.Rd  fairness_metric.Rd  resampling_data.Rd  reweighing_model_weights.Rd
fairml-r/tests/: testthat.R
fairml-r/tests/testthat/: test-bias-mitigation.R  test-fairness-evaluation.R
notebooks/: threshold-accuracy.ipynb  threshold-f1-score.ipynb  threshold-queue-rate.ipynb  threshold-utility-cost.ipynb
src/FairPkg/: bias_mitigation.py  fairml.py  fairness_evaluation.py  fairness_recommendation.py  fairness_tree.csv
src/FairPkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/FairPkg/FairPkg.egg-info/: SOURCES.txt  top_level.txt
src/FairPkg/Fairness_Package_Python.egg-info/: SOURCES.txt
src/FairPkg/fairness_data/: config_variables.yaml  mitigation_mapping.csv
src/Fairness_Package_Python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: integration_test_equalityml.py  test_bias_mitigation.py  test_fair.py  test_fair_boost.py  test_fairml.py  test_fairness_evaluation.py  test_fairness_recommendation.py  test_stats.py  test_threshold.py
