[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "equalityml"
version = "0.1.0-alpha"
authors = [
    {name = "Janice Davis, Ji Won, João Granja", email = "support@equalityai.com"}
]
description = "Algorithms for evaluating fairness metrics and mitigating unfairness in supervised machine learning"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "BlackBoxAuditing",
    "aif360>=0.5.0",
    "dalex>=1.5.0",
    "fairlearn>=0.7.0",
    "pandas>=1.2.5",
    "numpy>=1.20.3",
    "scikit-learn>=0.22.1",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)

[project.urls]
Website =  "https://equalityai.com"
Manifesto = "https://equalityai.com/community/#manifesto"
GitHub = "https://github.com/EqualityAI/EqualityML"
Slack = "https://equalityai.slack.com/ssb/redirect#/shared-invite/email"

[project.optional-dependencies]
tests = [
  "pytest>=3.5.0",
  "pytest-cov>=2.8.1",
]
doc = ["sphinx"]