[tool.poetry]
name = "equalityml"
version = "0.1.0a1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aif360= {git = "https://github.com/lanterno/AIF360.git"}
BlackBoxAuditing = "^0.1.54"
dalex = "^1.6.0"
fairlearn = "^0.8.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
